--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div>
         <h1>My Counter App</h1>
         <h2>0</h2>
-        <!-- I'ts just a basic counter app i created using HTML, CSS and JavaScript.
-        The JavaScript functions would make the color change to red whenever the value
-         of the number goes below zero(0), turns green whenever it goes above zero(0) i.e (1,2,3,,4,5,6..etc), and white when the reset buton is clicked -->
+         <!-- <h2>I'ts just a basic counter app i created using HTML, CSS and JavaScript.
+            The JavaScript functions would make the color change to red whenever the value
+             of the number goes below zero(0), turns green whenever it goes above zero(0) i.e (1,2,3,,4,5,6..etc), and white when the reset buton is clicked.</h2> -->
         <button><strong>-</strong></button>
         <button>Reset</button>
         <button><strong>+</strong></button>
