--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <h1>MY COUNTER APP</h1>
+        <h1>NUMBER OF WIVE</h1>
         <h1><strong>0</strong></h2>
         <!-- <h2>I'ts just a basic counter app i created using HTML, CSS and JavaScript.
             The JavaScript functions would make the color change to red whenever the value
